@@ -1,5 +1,7 @@
 'x' means: is done!
 
+- revisit error reporting of failed connects
+
 - add nick_change to documentation
 - Solve probable bug in recognized string handling
   with CDATA which is parsed by expat in a seperate step.
